<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.license.antivirus.activities.report.ReportActivity">

    <TextView
        android:id="@+id/ReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_report"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/backHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReportTitle">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/warningAppsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_apps">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/warningAppsRecycle"
            android:layout_width="match_parent"
            android:layout_height="155dp">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/riskyAppsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/risky_apps">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/riskyAppsRecycle"
            android:layout_width="match_parent"
            android:layout_height="155dp">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/malwareAppsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malware_apps">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/malwareAppsRecycle"
            android:layout_width="match_parent"
            android:layout_height="155dp">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/backHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="backHome"
        android:text="@string/home_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>